package domain.game.effect;

public interface DrawTrigger {
	DrawResult onDraw(EffectContext context);
}
